--- a/app/views/Options/update.html
+++ b/app/views/Options/update.html
@@ -7,35 +7,35 @@
         <div class="control-group">
             <label class="control-label" for="name_text">村名</label>
             <div class="controls">
-                <input type="text" name="name" class="xlarge" id="name_text" value="村">
+                <input type="text" name="name" class="xlarge" id="name_text" value="${village.name}">
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="form_text">編成</label>
             <div class="controls">
-                <textarea name="form" class="span4" id="form_text">${consts.Constants.FORM_CATTLE}</textarea>
+                <textarea name="form" class="span4" id="form_text">${village.form}</textarea>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="dummy_check">ダミー</label>
             <div class="controls">
-                <input type="checkbox" name="dummy" class="xlarge" id="dummy_check" value="1">
+                <input type="checkbox" name="dummy" class="xlarge" id="dummy_check" value="1"#{if village.dummyMemberId!=null && village.dummyMemberId > 0} checked#{/if}>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="day_text">昼の時間</label>
             <div class="controls">
-                <input type="text" name="dayTime" class="xlarge" id="day_text" value="5">分
+                <input type="text" name="dayTime" class="xlarge" id="day_text" value="${village.dayTime}">分
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="night_text">夜の時間</label>
             <div class="controls">
-                <input type="text" name="nightTime" class="xlarge" id="night_text" value="3">分
+                <input type="text" name="nightTime" class="xlarge" id="night_text" value="${village.nightTime}">分
             </div>
         </div>
         <div class="form-actions">
-            <button type="submit" class="btn btn-primary">登録する</button>
+            <button type="submit" class="btn btn-primary">更新する</button>
         </div>
     </fieldset>
 </form>
