もろもろ整える

--- a/app/views/Options/settle.html
+++ b/app/views/Options/settle.html
@@ -19,7 +19,8 @@
         <div class="control-group">
             <label class="control-label" for="dummy_check">ダミー</label>
             <div class="controls">
-                <input type="checkbox" name="dummy" class="xlarge" id="dummy_check" value="1">
+                <input type="radio" name="dummy" class="xlarge" value="true" checked>あり
+                <input type="radio" name="dummy" class="xlarge" value="false">なし
             </div>
         </div>
         <div class="control-group">
