fix #1 ダミーの参加者データがうまく取得できていなかった

--- a/app/views/Options/update.html
+++ b/app/views/Options/update.html
@@ -35,7 +35,7 @@
                 <input type="text" name="nightTime" class="xlarge" id="night_text" value="${village.nightTime}">分
             </div>
         </div>
-        <imput type="hidden" name="villageId" value="${village.villageId}">
+        <input type="hidden" name="villageId" value="${village.villageId}">
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">更新する</button>
         </div>
