村詳細画面のワイドカスタム構成はnl2br

--- a/app/views/Games/detail.html
+++ b/app/views/Games/detail.html
@@ -8,7 +8,7 @@
     </tr>
     <tr>
         <th>編成</th>
-        <td>${village.form}</td>
+        <td>${village.form.nl2br()}</td>
     </tr>
     <tr>
         <th>ダミー</th>
