--- a/app/views/Games/index.html
+++ b/app/views/Games/index.html
@@ -5,11 +5,22 @@
 #{/set}
 #{set 'navi'}
 <ul>
-    #{list items:members, as:'member'}
-        <li>
-        ${member.name}#{if !member.alive}(死亡)#{/if}
-        </li>
-    #{/list}
+    #{if village.state == models.enums.State.Epilogue||village.state == models.enums.State.Closed}
+        #{list items:members, as:'member'}
+            <li>
+            ${member.name}(${member.user.name})<br/>
+                #{if !member.alive}死亡#{/if}#{else}生存#{/else}
+            </li>
+        #{/list}
+    #{/if}
+    #{else}
+        #{list items:members, as:'member'}
+            <li>
+            ${member.name}<br/>
+                #{if !member.alive}死亡#{/if}#{else}生存#{/else}
+            </li>
+        #{/list}
+    #{/else}
     <li>
         残り時間 : <span id="time">0</span>
     </li>
