--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,19 +1,32 @@
 #{extends 'main.html' /} #{set title:'Home' /} #{set 'navi'}
-#{if session.user_id != null}<a href="@{Options.settle}">開村</a>#{/if}
+    #{if session.user_id != null}
+    <a href="@{Options.settle}">開村</a>
+    #{/if}
 #{/set}
 
 
+<h2>地獄</h2>
+<p> --天国のJava再実装は火の海となった。</p>
+<p>
+    人狼がCookieでパスワード送信とかファイルベースのログ管理とかノーフレームワーク&amp;非Rackとかで、<br/>
+    管理が大変だったり怖かったりしたので、<br/>
+    <a href="http://nginx.org/ja/">nginx</a> + <a href="http://www.playframework-ja.org/documentation/1.2.5/home">Play framework 1.x</a> + <a href="http://www-jp.mysql.com/">MySQL</a> で
+    パフォーマンスやらセキュリティやらを改善しようとしたものがこれになります。<br/>
+    <a href="https://github.com/dolpen/hell">僭越ながらGithubにソースを上げてあるので</a>、攻撃じゃなくてプルリクお願いします。
+</p>
+
+<h3>村一覧</h3>
 <table>
     <tr>
         <th>村ID</th>
         <th>村名</th>
         <th>状態</th>
     </tr>
-    #{list items:villages, as:'village'}
+#{list items:villages, as:'village'}
     <tr>
         <td>${village.villageId}</td>
         <td><a href="@{Games.index(village.villageId)}">${village.name}</a></td>
         <td>${village.state}</td>
     </tr>
-    #{/list}
+#{/list}
 </table>
