--- a/app/views/Games/index.html
+++ b/app/views/Games/index.html
@@ -4,7 +4,7 @@
     #{script src:'village.js'/}
 #{/set}
 #{set 'navi'}
-<ul>
+<ul class="nav nav-tabs nav-stacked">
     #{if village.state == models.enums.State.Epilogue||village.state == models.enums.State.Closed}
         #{list items:members, as:'member'}
             <li>
