狂信者、C狂、共有者実装

--- a/app/views/Games/index.html
+++ b/app/views/Games/index.html
@@ -19,6 +19,7 @@
         #{list items:members, as:'member'}
             <tr>
                 <td>
+                ${member.skill.label} --
                 ${member.name}<br/>
                     #{if !member.alive}死亡#{/if}#{else}生存#{/else}
                 </td>
@@ -46,11 +47,12 @@
 </p>
 
 
+#{set seeroar : finished || (me!=null && me.skill.group == models.enums.Group.Wolf) /}
 <table class="table">
 #{list items:logs, as:'log'}
     #{set roar : log.permission == models.enums.Permission.Group && (log.skill == models.enums.Skill.Werewolf || log.skill == models.enums.Skill.Crazy ) /}
     <tr class="${log.logClass}">
-        <td>#{if roar && !closet && !finished}遠吠え#{/if}
+        <td>#{if roar && !seeroar }遠吠え#{/if}
             #{elseif log.chara != null}
                 <img src="/public/images/${log.chara.party.dir}/${log.chara.characterId}.png" height="61" width="48"/><br/>
             ${log.name}
@@ -58,7 +60,7 @@
             #{else}
             ${log.name}
             #{/else}</td>
-        <td>#{if roar && !closet && !finished}わおーん#{/if}#{else}${log.body.nl2br()}#{/else}</td>
+        <td>#{if roar && !seeroar }わおーん#{/if}#{else}${log.body.nl2br()}#{/else}</td>
     </tr>
 #{/list}
 </table>
